feat: add calculator logic for +, -, *, /, pow, sqrt

--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
             <button class="calculator__button calculator__button_number" data-number>1</button>
             <button class="calculator__button calculator__button_number" data-number>2</button>
             <button class="calculator__button calculator__button_number" data-number>3</button>
-            <button class="calculator__button calculator__button_operator" data-operation="substract">-</button>
+            <button class="calculator__button calculator__button_operator" data-operation="subtract">-</button>
             <button class="calculator__button calculator__button_number" data-number>0</button>
-            <button class="calculator__button calculator__button_number" data-number>.</button>
+            <button class="calculator__button calculator__button_number" data-dot>.</button>
             <button class="calculator__button calculator__button_equals" data-equals>=</button>
             <button class="calculator__button calculator__button_operator" data-operation="add">+</button>
           </div>
