feet: add percent(%) operator support
also fixed unary operation behaviour

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <div class="calculator-buttons">
             <button class="calculator__button calculator__button_operator" data-unary-operation="sqrt">&Sqrt;</button>
             <button class="calculator__button calculator__button_operator" data-operation="pow">x<sup>y</sup></button>
-            <button class="calculator__button calculator__button_operator" data-operation="percentage">&percnt;</button>
+            <button class="calculator__button calculator__button_operator" data-operation-percent="percent">&percnt;</button>
             <button class="calculator__button calculator__button_operator" data-all-clear>AC</button>
             <button class="calculator__button calculator__button_number" data-number>7</button>
             <button class="calculator__button calculator__button_number" data-number>8</button>
