Revert "refactor: separated calculator logic and DOM interactions"
This reverts commit 08be2a132089c04d0ab481ea847c1798da174b4a.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="styles/normalize.css">
   <link rel="stylesheet" href="styles/style.css">
   <link rel="stylesheet" href="https://unpkg.com/simplebar@latest/dist/simplebar.css" />
-  <script defer src="js/index.js"></script>
+  <script defer src="main.js"></script>
   <script defer src="https://unpkg.com/simplebar@latest/dist/simplebar.min.js"></script>
 </head>
 
