feat: implemented history

--- a/index.html
+++ b/index.html
@@ -46,70 +46,11 @@
           </div>
         </div>
         <div class="calculator-history">
-          <ul class="calculator-history__list">
-            <li class="calculator-history__item">
-              <div class="calculator-history__item__previous-operand">123 + 1 =</div>
-              <div class="calculator-history__item__current-operand">124</div>
-            </li>
-            <li class="calculator-history__item">
-              <div class="calculator-history__item__previous-operand">123 + 1 =</div>
-              <div class="calculator-history__item__current-operand">124</div>
-            </li>
-            <li class="calculator-history__item">
-              <div class="calculator-history__item__previous-operand">123 + 1 =</div>
-              <div class="calculator-history__item__current-operand">124</div>
-            </li>
-            <li class="calculator-history__item">
-              <div class="calculator-history__item__previous-operand">123 + 1 =</div>
-              <div class="calculator-history__item__current-operand">124</div>
-            </li>
-            <li class="calculator-history__item">
-              <div class="calculator-history__item__previous-operand">123 + 1 =</div>
-              <div class="calculator-history__item__current-operand">124</div>
-            </li>
-            <li class="calculator-history__item">
-              <div class="calculator-history__item__previous-operand">123 + 1 =</div>
-              <div class="calculator-history__item__current-operand">124</div>
-            </li>
-            <li class="calculator-history__item">
-              <div class="calculator-history__item__previous-operand">123 + 1 =</div>
-              <div class="calculator-history__item__current-operand">124</div>
-            </li>
-            <li class="calculator-history__item">
-              <div class="calculator-history__item__previous-operand">123 + 1 =</div>
-              <div class="calculator-history__item__current-operand">124</div>
-            </li>
-            <li class="calculator-history__item">
-              <div class="calculator-history__item__previous-operand">123 + 1 =</div>
-              <div class="calculator-history__item__current-operand">124</div>
-            </li>
-            <li class="calculator-history__item">
-              <div class="calculator-history__item__previous-operand">123 + 1 =</div>
-              <div class="calculator-history__item__current-operand">124</div>
-            </li>
-            <li class="calculator-history__item">
-              <div class="calculator-history__item__previous-operand">123 + 1 =</div>
-              <div class="calculator-history__item__current-operand">124</div>
-            </li>
-            <li class="calculator-history__item">
-              <div class="calculator-history__item__previous-operand">123 + 1 =</div>
-              <div class="calculator-history__item__current-operand">124</div>
-            </li>
-            <li class="calculator-history__item">
-              <div class="calculator-history__item__previous-operand">123 + 1 =</div>
-              <div class="calculator-history__item__current-operand">124</div>
-            </li>
-            <li class="calculator-history__item">
-              <div class="calculator-history__item__previous-operand">123 + 1 =</div>
-              <div class="calculator-history__item__current-operand">124</div>
-            </li>
-            <li class="calculator-history__item">
-              <div class="calculator-history__item__previous-operand">123 + 1 =</div>
-              <div class="calculator-history__item__current-operand">124</div>
-            </li>
+          <ul class="calculator-history__list" data-history-list>
+            
           </ul>
           <div class="calculator-history__bottom">
-            <button class="calculator-history__clear">
+            <button class="calculator-history__clear" data-clear-history>
               <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-trash"
                 viewbox="0 0 16 16">
                 <path
